# remote-benkyo

./: .env.example  .gitignore  CHANGELOG.md  README-jp.md  README.md  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/benkyo-graph-edit/: SKILL.md
.claude/skills/benkyo-project-init/: SKILL.md
.claude/skills/benkyo-session-wrap/: SKILL.md
.claude/skills/benkyo-treatment-shift/: SKILL.md
.claude/skills/benkyo-tutoring/: SKILL.md
.codex-plugin/: plugin.json
SETUP/: OVERVIEW.md  debian-jp.md  debian.md  mac-jp.md  mac.md  win-jp.md  win.md
api/: Dockerfile  entrypoint.sh
api/app/: config.py  database.py  main.py  models.py  schemas.py
api/app/routers/: auth.py  sessions.py  subjects.py
api/app/services/: benkyo.py  claude.py
cloudflared/: config.yml
db/: init.sql
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Canvas.tsx  FeedbackPanel.tsx  GraphView.tsx  ProblemDisplay.tsx  SubjectCard.tsx  TldrawCanvas.tsx
frontend/src/lib/: api.ts  auth.ts
nginx/: nginx.conf
src/benkyo/: __init__.py  cli.py  db.py  ids.py  repository.py
tests/: test_events.py  test_session_end.py
tests/test_cli/: test_events.py  test_session.py
web/backend/: Dockerfile  pyproject.toml
web/backend/src/benkyo_web/: app.py  database.py
web/backend/src/benkyo_web/routes/: concepts.py  events.py  projects.py  schedule.py  tunnel.py
web/frontend/: Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
(+30 files in other folders)
