[project]
name = "benkyo-web"
version = "0.1.0"
description = "Litestar web server for benkyo"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.12",
    "uvicorn[standard]>=0.30",
    "docker>=7.0",
]

[project.scripts]
benkyo-web = "benkyo_web.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benkyo_web"]
